--- a/Map Page.html
+++ b/Map Page.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html>
 
 <head>
     <meta charset="utf-8" />
     <title>Plant Quest 2</title>
+    <link style="text/css" href="Map Style.css" rel="stylesheet" />
 </head>
 
 <body>
