Decided on a name/topic

--- a/Login.html
+++ b/Login.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Quest</h1>
+    <h1>Plant Quest 2</h1>
     <h3>Continue:</h3>
     <h2>Username: <input type="text" /></h2>
     <h2>Password: <input type="text" /></h2>
