--- a/Login.html
+++ b/Login.html
@@ -15,8 +15,8 @@
     <!-- Continue Options (needs to communicate with database) -->
     <div class="continue">
         <h3>Continue:</h3>
-        <h2>Username: <input type="text" /></h2>
-        <h2>Password: <input type="text" /></h2>
+        <h2>Username: <br /><input type="text" /></h2>
+        <h2>Password: <br /><input type="text" /></h2>
         <button>Enter</button>
     </div>
 
