Stylized things some more

--- a/Login.html
+++ b/Login.html
@@ -14,10 +14,10 @@
     
     <!-- Continue Options (needs to communicate with database) -->
     <div class="continue">
-        <h3>Continue:</h3>
-        <h2>Username: <br /><input type="text" /></h2>
-        <h2>Password: <br /><input type="text" /></h2>
-        <button>Enter</button>
+        <h3>Continue</h3>
+        <h2>Enter your username: <br /><input type="text" /></h2>
+        <h2>Enter your password: <br /><input type="text" /></h2>
+        <button>Login</button>
     </div>
 
     <!-- New Game Options (also needs to communicate with database but not as much) -->
